// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityAvatarComponent should display CompanyLogoSource if AvatarSource === default_user.png and CompanyLogoSource !== null 1`] = `
<pf-community-avatar
  AvatarSource={[Function String]}
  CompanyLogoSource={[Function String]}
  IsReply="false"
  __ngContext__={[Function LRootView]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="undefinedcompanyLogo.png"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display default avatar if AvatarSource === default_user.png 1`] = `
<pf-community-avatar
  AvatarSource={[Function String]}
  CompanyLogoSource="null"
  IsReply="false"
  __ngContext__={[Function LRootView]}
>
  <div
    class="float-left pf-avatar default-post-avatar"
  >
  </div>
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display post-size avatar if IsReply === false  1`] = `
<pf-community-avatar
  IsReply="false"
  __ngContext__={[Function LRootView]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="NaN"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should display reply-size avatar if IsReply === true  1`] = `
<pf-community-avatar
  IsReply={[Function Boolean]}
  __ngContext__={[Function LRootView]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar reply-avatar"
    src="NaN"
  />
</pf-community-avatar>
`;

exports[`CommunityAvatarComponent should show avatar component 1`] = `
<pf-community-avatar
  IsReply="false"
  __ngContext__={[Function LRootView]}
>
  <img
    alt="avatar"
    class="float-left pf-avatar post-avatar"
    src="NaN"
  />
</pf-community-avatar>
`;
